src/scss/pages/_homePage.scss
//IMPORT VARIABILI
@use "../abstract/variables" as variabili;
@use "../abstract/animations" as animazioni;


body {
    font-family: variabili.$fontFamilyMain;
    width: 98%;
    overflow: hidden;
    margin: 0 auto;
    background: #e6f3ff;
    background: linear-gradient(164deg, rgba(230, 243, 255, 1) 0%, rgba(255, 255, 255, 1) 100%);
    box-sizing: border-box;
}

// PAGE CONTAINER
#container{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin: 0 auto;

    @media (min-width:1024px) {
        margin: 0 auto;
        max-width: 1300px;
        display: grid;
        grid-template-columns: 1fr 2fr 1fr;
        grid-template-areas:
            "header header header"
            "aside main sidebar"
            "footer footer footer";
        grid-template-rows: auto auto auto;
        gap: 5px;
    }
}

.grid-item {
    // border: 1px solid red;
    width: 100%;

    // DESKTOP
    @media (min-width:1024px) {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        // border: 1px solid red;
        width: 100%;
    }
}

.menu__show {
    display: none;
    position: absolute;
}


// - - - - A S I D E - - - - - - 
.aside {
    display: none;
    grid-area: "aside";
    width: 100%;
    height: auto;
    border: 1px solid salmon;

    // DESKTOP
    @media (min-width:1024px) {
        height: 100%;
        display: block;
        grid-area: "aside";
        width: 100%;
        padding: 16px;
        box-sizing: border-box;
        border-radius: 8px;

    &__title {
            font-size: 26px;
            font-weight: bold;
            color: white;
            background-color: variabili.$coloreArancione;
            padding: 5px;
            border-radius: 8px;

            &--small {
                font-size: 20px;
                color: variabili.$coloreArancione;
            }
        }

    &__box {
        margin-top: 8px;
        border-radius: 8px;
        gap: 16px;
        width: 100%;
        border: 1px solid saddlebrown;
        padding: 8px;
        background-color: white;
        }
    }
    
}

// - - - - M A I N - - - - - -
.main {
    width: 100%;
    grid-area: "main";
    height: fit-content;
    display: flex;
    flex-direction: column;
    align-items: flex-start;


    &__titles {
        width: 100%;
        border-radius: 8px;
        padding: 6px;
        margin: 8px 0 0 0;
        box-sizing: border-box;
        background: variabili.$coloreArancione;

        &__big {
            font-size: 20px;
            text-align: center;
            padding: 0;
            margin: 0;
            color: #ffffff;
        }
        
    }

    &__contatore {
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        padding: 8px;
        margin-top: 5px;
        height: 300px;
        border-radius: 8px;
        box-sizing: border-box;
        background: #ffffff;
        border: 1px solid variabili.$coloreArancione;
        

        @media (min-width:1024px) {
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: space-between;
            padding: 8px;
            margin-top: 8px;
            height: 400px;
            width: 100%;
            }
        
            //box per il numero
        &__numero {
            display: flex;
            align-items: center;
            justify-content: center;
            font-size: 120px;
            height: auto;
            border-radius: 50%;
            font-weight: bold;
            color: variabili.$coloreArancione;

            @media (min-width:1024px) {
                font-size: 180px;
            }
            }
        }
        
        &__button {
            // STILE BOTTONI 
            width: 100%;
            height: 50px;
            display: flex;
            align-items: center;
            justify-content: space-around;
            height: 80px;
            border: 1px solid variabili.$coloreArancione;
            border-radius: 8px;
        }
        
        &__randomText{
            margin: 16px auto;
            text-align: center;
            width: 100%;

        span {
            animation: lampeggiamento 1s ease-in-out infinite;
        }
    }
}
    

// - - - - S I D E B A R - - - - - 
.sidebar {
    width: 100%;
    font-size: 18px;
    border: 1px solid variabili.$coloreBlu;
    background-color: #d2e7fb;
    border-radius: 8px;
    height: auto;
    display: block;
    padding: 16px;
    margin-bottom: 16px;

    @media (min-width:1024px) {
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: flex-start;
        gap: 16px;
    }

    &__score {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: center;

        @media (min-width:1024px) {
            width: 95%;
        }

        &__info {
            width: 100%;
            // border: 1px solid black;
            background-color: #f9f9f9;
            border-radius: 8px;
            padding: 8px;
            font-size: 20px;
            margin-top: 8px;
            height: 100%;

            #info-name, #info-score, #info-cpu {
                color: variabili.$coloreArancione;
                font-weight: bold;
                font-size: 20px;
            }
        }

        li{
            list-style-type: none;
            padding-top: 10px;
            font-size: 18px;

        span {
            font-size: 22px;
            }
        }
    } //chiude score__

    &__title {
        margin: 0;
        font-size: 22px;
        color: white;
        background-color: variabili.$coloreBluScuro;
        padding: 5px;
        border-radius: 8px;
    }

    &__image {
        margin-top: 16px;
    }
}

